Update GitHub repository name in config

--- a/_configTest.yml
+++ b/_configTest.yml
@@ -2,4 +2,4 @@ environment:
   searchUrl: searchtest.evolveum.com
   docsUrl: docstest.evolveum.com
   name: docs-test
-  midpointRepositoryGhName: Evolveum/midpoint
+  midpointRepositoryGhName: janmederly/testversioning
